fix spacing, icons; loading state

--- a/extension/src/popup/basics/ListNavLink/styles.scss
+++ b/extension/src/popup/basics/ListNavLink/styles.scss
@@ -2,6 +2,7 @@
   line-height: 1.5rem;
 
   a {
+    align-items: center;
     color: var(--pal-text-primary);
     display: flex;
     justify-content: space-between;
@@ -11,5 +12,9 @@
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
+  }
+
+  &__icon {
+    height: 1.25rem;
   }
 }
