--- a/extension/src/popup/views/Settings/styles.scss
+++ b/extension/src/popup/views/Settings/styles.scss
@@ -1,16 +1,22 @@
 .Settings {
-  padding-top: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  height: calc(var(--popup--height) - var(--bottom-nav--height));
+  padding: 2rem var(--popup--side-padding) var(--popup-vertical-padding);
 
-  &--header {
+  &__header {
     margin-bottom: 2rem;
   }
 
-  &--version {
+  &__version {
     color: var(--pal-text-tertiary);
     font-size: 0.875rem;
   }
 
-  &--logout {
-    margin-top: 7rem;
+  &__logout {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
   }
 }
